// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSPopoverTooltip Alignment (Button) 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_bottom-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_bottom-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_left-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_left-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_top-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_top-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_right-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          aria-describedby="myPopoverId"
          className="slds-button slds-button_neutral"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Trigger Tooltip
        </button>
        <div
          className="absolute-positioned slds-nubbin_right-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Alignment (icon) 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_left-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_left-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_top-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_top-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_right-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          className="slds-icon_container slds-icon-standard-case"
        >
          <svg
            aria-hidden="true"
            className="slds-icon slds-icon_small"
          >
            <use
              href="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case Icon
          </span>
        </span>
        <div
          className="absolute-positioned slds-nubbin_right-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            <span>
              Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Alignment (span) 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_bottom-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_left-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_left-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_top-left slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_top-right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_right slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_right-top slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
    <div
      data-ignore-axe-duplicate-id-aria={true}
      style={
        Object {
          "margin": "100px auto",
        }
      }
    >
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <span
          aria-describedby="myPopoverId"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex="0"
        >
          Trigger Tooltip
        </span>
        <div
          className="absolute-positioned slds-nubbin_right-bottom slds-popover slds-popover_tooltip"
          id="myPopoverId"
          onKeyDown={[Function]}
          role="tooltip"
          style={
            Object {
              "outline": 0,
              "pointerEvents": "none",
              "position": "absolute",
            }
          }
        >
          <div
            className="slds-popover__body"
          >
            Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Base 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
        "lineHeight": "1",
      }
    }
  >
    <button
      aria-disabled={true}
      className="slds-button slds-button_icon"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon"
      >
        <use
          href="/assets/icons/utility-sprite/svg/symbols.svg#info"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Help
      </span>
    </button>
    <span />
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Button 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
        "lineHeight": "1",
      }
    }
  >
    <button
      className="slds-button slds-button_neutral"
      disabled={false}
      id="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Hover or focus to Open
    </button>
    <span />
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Button Group 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <ul
    className="slds-button-group-list slds-p-bottom_medium"
    id="button-group-tooltip"
  >
    <li>
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          className="slds-button slds-button_neutral"
          disabled={false}
          id="refresh-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Refresh
        </button>
        <span />
      </div>
    </li>
    <li>
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <button
          className="slds-button slds-button_neutral"
          disabled={false}
          id="edit-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Edit
        </button>
        <span />
      </div>
    </li>
    <li>
      <div
        className="slds-tooltip-trigger"
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1",
          }
        }
      >
        <div
          className="slds-dropdown-trigger slds-dropdown-trigger_click"
          id="options"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={null}
          onMouseLeave={null}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="slds-button slds-button_icon-border-filled ignore-click-options"
            disabled={false}
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              className="slds-button__icon"
            >
              <use
                href="/assets/icons/utility-sprite/svg/symbols.svg#down"
              />
            </svg>
            <span
              className="slds-assistive-text"
            >
              More Options
            </span>
          </button>
        </div>
        <span />
      </div>
    </li>
  </ul>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Learn More 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
        "lineHeight": "1",
      }
    }
  >
    <a
      href="#"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span>
        <svg
          aria-hidden="true"
          className="slds-icon slds-icon_x-small slds-icon-text-default"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help
        </span>
      </span>
    </a>
    <span />
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip Open 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
        "lineHeight": "1",
      }
    }
  >
    <button
      aria-describedby="myPopoverId"
      className="slds-button slds-button_neutral"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      Trigger Tooltip
    </button>
    <div
      className="absolute-positioned slds-nubbin_top slds-popover slds-popover_tooltip dialog-classname"
      id="myPopoverId"
      onKeyDown={[Function]}
      role="tooltip"
      style={
        Object {
          "outline": 0,
          "pointerEvents": "none",
          "position": "absolute",
        }
      }
    >
      <div
        className="slds-popover__body"
      >
        Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip With Anchored Nubbin 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div>
    <div
      className="slds-tooltip-trigger"
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1",
        }
      }
    >
      <style>
        #anchored-nubbin-top:after, #anchored-nubbin-top:before {
	display: none;
}
      </style>
      <div
        style={
          Object {
            "height": "0",
            "left": "0px",
            "position": "relative",
            "top": "0",
            "width": "0",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#16325c",
              "content": "",
              "height": "1rem",
              "left": "-8px",
              "position": "absolute",
              "top": "-19px",
              "transform": "rotate(45deg)",
              "width": "1rem",
            }
          }
        />
      </div>
      <button
        aria-describedby="anchored-nubbin-top"
        aria-disabled={true}
        className="slds-button slds-button_icon"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help
        </span>
      </button>
      <div
        className="absolute-positioned slds-nubbin_bottom-left slds-popover slds-popover_tooltip"
        id="anchored-nubbin-top"
        onKeyDown={[Function]}
        role="tooltip"
        style={
          Object {
            "outline": 0,
            "pointerEvents": "none",
            "position": "absolute",
          }
        }
      >
        <div
          className="slds-popover__body"
        >
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": "1rem",
      }
    }
  >
    <div
      className="slds-tooltip-trigger"
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1",
        }
      }
    >
      <style>
        #anchored-nubbin-right:after, #anchored-nubbin-right:before {
	display: none;
}
      </style>
      <div
        style={
          Object {
            "height": "0",
            "left": "0px",
            "position": "relative",
            "top": "0px",
            "width": "0",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#16325c",
              "content": "",
              "height": "1rem",
              "left": "3px",
              "position": "absolute",
              "top": "-9px",
              "transform": "rotate(45deg)",
              "width": "1rem",
            }
          }
        />
      </div>
      <button
        aria-describedby="anchored-nubbin-right"
        aria-disabled={true}
        className="slds-button slds-button_icon"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help
        </span>
      </button>
      <div
        className="absolute-positioned slds-nubbin_left slds-popover slds-popover_tooltip"
        id="anchored-nubbin-right"
        onKeyDown={[Function]}
        role="tooltip"
        style={
          Object {
            "outline": 0,
            "pointerEvents": "none",
            "position": "absolute",
          }
        }
      >
        <div
          className="slds-popover__body"
        >
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": "1rem",
      }
    }
  >
    <div
      className="slds-tooltip-trigger"
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1",
        }
      }
    >
      <style>
        #anchored-nubbin-left:after, #anchored-nubbin-left:before {
	display: none;
}
      </style>
      <div
        style={
          Object {
            "height": "0",
            "left": "0",
            "position": "relative",
            "top": "0px",
            "width": "0",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#16325c",
              "content": "",
              "height": "1rem",
              "left": "-19px",
              "position": "absolute",
              "top": "-9px",
              "transform": "rotate(45deg)",
              "width": "1rem",
            }
          }
        />
      </div>
      <button
        aria-describedby="anchored-nubbin-left"
        aria-disabled={true}
        className="slds-button slds-button_icon"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help
        </span>
      </button>
      <div
        className="absolute-positioned slds-nubbin_right slds-popover slds-popover_tooltip"
        id="anchored-nubbin-left"
        onKeyDown={[Function]}
        role="tooltip"
        style={
          Object {
            "outline": 0,
            "pointerEvents": "none",
            "position": "absolute",
          }
        }
      >
        <div
          className="slds-popover__body"
        >
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": "1rem",
      }
    }
  >
    <div
      className="slds-tooltip-trigger"
      style={
        Object {
          "display": "inline-block",
          "lineHeight": "1",
        }
      }
    >
      <style>
        #anchored-nubbin-bottom:after, #anchored-nubbin-bottom:before {
	display: none;
}
      </style>
      <div
        style={
          Object {
            "height": "0",
            "left": "0px",
            "position": "relative",
            "top": "0px",
            "width": "0",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#16325c",
              "content": "",
              "height": "1rem",
              "left": "-8px",
              "position": "absolute",
              "top": "3px",
              "transform": "rotate(45deg)",
              "width": "1rem",
            }
          }
        />
      </div>
      <button
        aria-describedby="anchored-nubbin-bottom"
        aria-disabled={true}
        className="slds-button slds-button_icon"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#info"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Help
        </span>
      </button>
      <div
        className="absolute-positioned slds-nubbin_top-right slds-popover slds-popover_tooltip"
        id="anchored-nubbin-bottom"
        onKeyDown={[Function]}
        role="tooltip"
        style={
          Object {
            "outline": 0,
            "pointerEvents": "none",
            "position": "absolute",
          }
        }
      >
        <div
          className="slds-popover__body"
        >
          Sit nulla est ex deserunt exercitation anim occaecat. Nostrud ullamco deserunt aute id consequat veniam incididunt duis in sint irure nisi.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSPopoverTooltip With Delay 1`] = `
<div
  className="slds-p-around_medium slds-m-horizontal_x-large"
  style={
    Object {
      "margin": "150px auto",
      "width": "500px",
    }
  }
>
  <div
    className="slds-tooltip-trigger"
    style={
      Object {
        "display": "inline-block",
        "lineHeight": "1",
      }
    }
  >
    <button
      aria-disabled={true}
      className="slds-button slds-button_icon"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="slds-button__icon"
      >
        <use
          href="/assets/icons/utility-sprite/svg/symbols.svg#info"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Help
      </span>
    </button>
    <span />
  </div>
</div>
`;
